--- a/HomeDecorStore/Site.Master
+++ b/HomeDecorStore/Site.Master
@@ -84,7 +84,7 @@
             </asp:ContentPlaceHolder>
         </div>
 
-         <footer>
+         <footer class="mt-4">
             <div class="container">
                 <div class="row g-4">
                     <div class="col-md-4">
@@ -104,7 +104,7 @@
                         <ul class="list-unstyled">
                             <li>Email: info@homedecor.com</li>
                             <li>Phone: (555) 123-4567</li>
-                            <li>Address: 123 Design Street, Decor City</li>
+                            <li>Address: 456 Maple Avenue, Toronto, Canada</li>
                         </ul>
                     </div>
                 </div>
